CAR-1036: fixed z-index of the more info button in XS mode

--- a/WebContent/framework/modules/less/lmi/layout.less
+++ b/WebContent/framework/modules/less/lmi/layout.less
@@ -2,4 +2,10 @@
   .compare-prices-cta {
     text-align: right;
   }
+
+  @media (@xs-only) {
+    .morePromptContainer {
+      z-index: 395;
+    }
+  }
 }
